# Linux_System_Monitor_TUI

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_uninstall.cmake.in
include/: cpu.h  display.h  memory.h  process.h
src/: cpu.cpp  display.cpp  main.cpp  memory.cpp  process.cpp
